# gitlab-hook-deployer

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOW_TO_CONFIGURE.md  README.md  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
scripts/: gitlab_bulk_setup.py
web/: package.json  pnpm-lock.yaml
web/apps/ui/: package.json  vite.config.ts
web/apps/ui/src/: App.vue
