[project]
name = "gitlab-hook-deployer"
version = "0.1.0"
description = "GitLab webhook deploy service with configurable repo directory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false
